<resources>
    <string name="app_name">Xsolla Sample App</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="failure">Failure</string>
    <string name="save_changes">Save changes</string>

    <string name="xsolla_payments_redirect_scheme">https</string>
    <string name="xsolla_payments_redirect_host">example.com</string>
    <string name="xsolla_payments_redirect_path_prefix">/payment</string>

    <string name="login_tab">log in</string>
    <string name="sign_up_tab">sign up</string>
    <string name="username_input_hint">Username</string>
    <string name="email_input_hint">E-mail</string>
    <string name="password_input_hint">Password</string>
    <string name="password_confirm_input_hint">Confirm password</string>
    <string name="log_in_button">log in</string>
    <string name="sign_up_button">sign up</string>
    <string name="reset_password_button">reset password</string>
    <string name="log_in_with_google_button">log in with google</string>
    <string name="log_in_with_facebook_button">log in with facebook</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="go_to_store">Go to store</string>
    <string name="privacy_policy">By continuing, you agree to be bound by our\n<u>Privacy Policy</u></string>
    <string name="purchased_placeholder">Purchased</string>

    <string name="drawer_item_vi">Virtual items</string>
    <string name="drawer_item_vc">Virtual currency</string>
    <string name="drawer_item_inventory">My inventory</string>
    <string name="drawer_title_store">Store</string>
    <string name="drawer_item_logout">Log out</string>
    <string name="drawer_item_cart">Cart</string>
    <string name="drawer_item_friends">My friends</string>

    <string name="cart_fragment_checkout_button">Go to Checkout</string>
    <string name="cart_fragment_continue_button">Continue Shopping</string>
    <string name="cart_fragment_clear_button">Clear All</string>
    <string name="cart_message_empty">Your cart is empty</string>
    <string name="cart_subtotal">Subtotal</string>
    <string name="cart_discount">Discount</string>
    <string name="cart_total">Total</string>

    <string name="friends_add_friends_button_text">+ ADD FRIENDS</string>
    <string name="friends_accept_friend_button">Accept</string>
    <string name="friends_decline_friend_button">Decline</string>
    <string name="friends_add_friend_button">Add friend</string>
    <string name="friends_unblock_friend_button">Unblock</string>
    <string name="friends_cancel_friend_button">Cancel request</string>
    <string name="friends_request_accepted_text">✓ Request accepted</string>
    <string name="friends_request_declined_text">× Request declined</string>
    <string name="friends_tab_placeholder">Your friends appear here</string>
    <string name="friends_pending_tab_placeholder">No pending friend requests</string>
    <string name="friends_requested_tab_placeholder">All sent requests appear here</string>
    <string name="friends_blocked_tab_placeholder">All blocked players appear here</string>

    <string name="friends_options_dialog_title">%s options</string>
    <string name="friends_option_block">Block user</string>
    <string name="friends_options_block_button">Block</string>
    <string name="friends_option_block_title">Block %s?</string>
    <string name="friends_option_delete">Delete friend</string>
    <string name="friends_options_delete_button">Remove</string>
    <string name="friends_option_delete_title">Remove %s from the friends list?</string>

    <string name="profile_title">Account</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_nickname_hint">Nickname</string>
    <string name="profile_phone_hint">Phone number</string>
    <string name="profile_firstname_hint">First name</string>
    <string name="profile_lastname_hint">Last name</string>
    <string name="profile_birthday_hint">Date of birth</string>
    <string name="profile_gender_hint">Gender</string>
    <string name="profile_avatar">Avatar</string>
    <string name="profile_fields_were_changed">Fields were successfully changed</string>
    <string name="profile_phone_validation">Phone must start with "+" and contains 5..25 digits</string>
    <string name="profile_text_field_validation">%s length must be less than 255 symbols</string>
    <string name="profile_letter_was_sent">A letter has been sent to the %s. Follow the link in the letter — and you can create a new password</string>
    <string name="avatar_remove_button">Remove avatar</string>

    <string name="character_title">Character</string>
    <string name="character_tab1">Read-only attributes</string>
    <string name="character_tab2">User-editable attributes</string>
    <string name="character_lvl_up">\tLevel up for 200</string>
    <string name="character_lvl">%d lvl</string>
    <string name="character_1lvl">1 lvl</string>
    <string name="character_read_only_attributes_footer">See the documentation to learn more about read-only attributes.</string>
    <string name="character_read_only_attributes_placeholder">No attributes set. See the documentation to learn more about read-only attributes.</string>
    <string name="character_editable_attributes_placeholder">No attributes set</string>
    <string name="character_editable_attributes_footer">Add attribute</string>
    <string name="character_edit_attribute_title">Custom attribute</string>
    <string name="character_edit_attribute_save_button">Save changes</string>
    <string name="character_edit_attribute_remove_button">Remove attribute</string>
    <string name="character_edit_attribute_discard_button">Discard changes</string>
    <string name="character_edit_attribute_key_hint">Attribute key</string>
    <string name="character_edit_attribute_value_hint">Attribute value</string>

</resources>
