<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.character.EditAttributeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/attributeToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_white_close_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/character_edit_attribute_title" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/attributeKeyLayout"
        style="@style/Widget.Xsolla.TextInputLayoutFilled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/character_edit_attribute_key_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attributeToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/attributeKeyInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@drawable/input_cursor"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/attributeValueLayout"
        style="@style/Widget.Xsolla.TextInputLayoutFilled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/character_edit_attribute_value_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attributeKeyLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/attributeValueInput"
            android:textCursorDrawable="@drawable/input_cursor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/removeDiscardButton"
        style="@style/Widget.Xsolla.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/character_edit_attribute_remove_button"
        app:layout_constraintStart_toStartOf="@id/attributeValueLayout"
        app:layout_constraintTop_toBottomOf="@id/attributeValueLayout" />

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.Xsolla.ActionButton.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/character_edit_attribute_save_button"
        app:layout_constraintEnd_toEndOf="@id/attributeValueLayout"
        app:layout_constraintTop_toBottomOf="@id/attributeValueLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>